Project

General

Profile

Actions

Bug #21319

closed

[cli] mirror "getter" commands will fail if mirroring has never been enabled

Added by Jason Dillaman over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

They should filter out the -ENOENT error from the missing rbd_mirroring object:

$ rbd mirror pool status dummy
rbd: failed to get status summary for mirrored images: (2) No such file or directory2017-09-08 15:15:11.168446 7f3dc319b1c0 -1 librbd: Failed to get mirror status summary: (2) No such file or directory

Related issues 2 (0 open2 closed)

Copied to rbd - Backport #21441: luminous: [cli] mirror "getter" commands will fail if mirroring has never been enabledResolvedNathan CutlerActions
Copied to rbd - Backport #21442: jewel: [cli] mirror "getter" commands will fail if mirroring has never been enabledResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman over 6 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21441: luminous: [cli] mirror "getter" commands will fail if mirroring has never been enabled added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21442: jewel: [cli] mirror "getter" commands will fail if mirroring has never been enabled added
Actions #6

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF