rbd: mirror "get" actions now have cleaner error messages

Fixes: http://tracker.ceph.com/issues/21319
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 053be9847ff0052348aa259520d641923e57537d)

Conflicts:
	src/librbd/api/Mirror.cc: methods moved from internal.cc
	src/tools/rbd/action/MirrorPool.cc: refactored post-Jewel